// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BridgeInputGroup should render destination networks 1`] = `
<div
  class="mm-modal"
  data-testid="bridge-network-picker-popover"
>
  <div
    aria-hidden="true"
    class="mm-box mm-modal-overlay mm-box--width-full mm-box--height-full mm-box--background-color-overlay-default"
  />
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />
  <div
    data-focus-lock-disabled="false"
  >
    <div
      class="mm-box mm-modal-content mm-box--padding-top-4 mm-box--sm:padding-top-8 mm-box--md:padding-top-12 mm-box--padding-right-4 mm-box--padding-bottom-4 mm-box--sm:padding-bottom-8 mm-box--md:padding-bottom-12 mm-box--padding-left-4 mm-box--display-flex mm-box--justify-content-center mm-box--align-items-flex-start mm-box--width-screen mm-box--height-screen"
    >
      <section
        aria-modal="true"
        class="mm-box mm-modal-content__dialog mm-modal-content__dialog--size-sm flex h-full flex-col overflow-hidden mm-box--padding-0 mm-box--padding-top-4 mm-box--padding-bottom-4 mm-box--display-flex mm-box--flex-direction-column mm-box--width-full mm-box--background-color-background-default mm-box--rounded-lg"
        role="dialog"
      >
        <header
          class="grid grid-cols-[1fr_auto_1fr] items-center px-4 pb-4"
        >
          <div
            class="col-start-2 col-end-3 w-full"
          >
            <h4
              class="text-default text-s-heading-sm leading-s-heading-sm tracking-s-heading-sm md:text-l-heading-sm md:leading-l-heading-sm md:tracking-l-heading-sm font-bold font-default text-center"
            >
              Select network
            </h4>
          </div>
          <div
            class="col-start-3 justify-self-end"
          >
            <button
              aria-label="Close"
              class="inline-flex items-center justify-center p-0 h-8 w-8 rounded-lg bg-transparent hover:bg-hover active:bg-pressed text-icon-default"
            >
              <svg
                class="inline-block w-6 h-6 text-inherit"
                fill="currentColor"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M6.4 19 5 17.6l5.6-5.6L5 6.4 6.4 5l5.6 5.6L17.6 5 19 6.4 13.4 12l5.6 5.6-1.4 1.4-5.6-5.6z"
                />
              </svg>
            </button>
          </div>
        </header>
        <div
          class="flex flex-col min-h-0 flex-1 overflow-y-auto"
        >
          <button
            class="flex min-h-16 w-full cursor-pointer items-center justify-between border-0 p-4 text-left hover:bg-hover bg-muted"
            data-testid="bridge-network-picker-popover-all-networks"
            type="button"
          >
            <div
              class="flex min-w-0 items-center gap-3"
            >
              <div
                class="inline-flex shrink-0 items-center justify-center overflow-hidden bg-alternative rounded-lg h-8 w-8"
              >
                <img
                  alt="All networks"
                  class="size-full object-contain"
                  src="Global"
                />
              </div>
              <p
                class="text-default text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-medium font-default truncate"
              >
                All networks
              </p>
            </div>
            <span
              class="mm-box mm-icon mm-icon--size-lg mm-box--display-inline-block mm-box--color-inherit"
              style="mask-image: url('./images/icons/check.svg');"
            />
          </button>
          <div
            class="flex flex-col"
          >
            <p
              class="text-alternative text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-medium font-default px-4 pb-2 pt-4"
            >
              Default networks
            </p>
            <div
              class=""
              data-testid="bridge-network-picker-popover-item-solana:5eykt4UsFv8P8NJdTREpY1vzqKqZKvdp"
            >
              <div
                class="mm-box multichain-network-list-item multichain-network-list-item--deselected mm-box--padding-top-4 mm-box--padding-right-4 mm-box--padding-bottom-4 mm-box--padding-left-4 mm-box--display-flex mm-box--gap-4 mm-box--justify-content-space-between mm-box--align-items-center mm-box--width-full mm-box--background-color-transparent"
                data-testid="network-list-item-solana:5eykt4UsFv8P8NJdTREpY1vzqKqZKvdp"
              >
                <div
                  class="mm-box mm-text mm-avatar-base mm-avatar-base--size-md mm-avatar-network mm-text--body-sm mm-text--text-transform-uppercase mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-background-alternative mm-box--rounded-md mm-box--border-color-background-default mm-box--border-width-1 box--border-style-solid"
                >
                  <img
                    alt="Solana logo"
                    class="mm-avatar-network__network-image"
                    src="./images/solana-logo.svg"
                  />
                </div>
                <div
                  class="mm-box mm-box--display-flex mm-box--flex-direction-column mm-box--justify-content-flex-start mm-box--align-items-flex-start mm-box--width-full"
                  style="overflow: hidden;"
                >
                  <div
                    class="mm-box mm-box--display-flex mm-box--gap-2 mm-box--flex-direction-row mm-box--align-items-center mm-box--width-full"
                    data-testid="Solana"
                  >
                    <div
                      class="multichain-network-list-item__tooltip"
                    >
                      <div
                        class=""
                        style="display: inline;"
                        tabindex="0"
                        title=""
                      >
                        <p
                          class="mm-box mm-text mm-text--body-md mm-text--ellipsis mm-box--color-text-default mm-box--background-color-transparent"
                          tabindex="0"
                        >
                          Solana
                        </p>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class=""
              data-testid="bridge-network-picker-popover-item-bip122:000000000019d6689c085ae165831e93"
            >
              <div
                class="mm-box multichain-network-list-item multichain-network-list-item--deselected mm-box--padding-top-4 mm-box--padding-right-4 mm-box--padding-bottom-4 mm-box--padding-left-4 mm-box--display-flex mm-box--gap-4 mm-box--justify-content-space-between mm-box--align-items-center mm-box--width-full mm-box--background-color-transparent"
                data-testid="network-list-item-bip122:000000000019d6689c085ae165831e93"
              >
                <div
                  class="mm-box mm-text mm-avatar-base mm-avatar-base--size-md mm-avatar-network mm-text--body-sm mm-text--text-transform-uppercase mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-background-alternative mm-box--rounded-md mm-box--border-color-background-default mm-box--border-width-1 box--border-style-solid"
                >
                  <img
                    alt="Bitcoin logo"
                    class="mm-avatar-network__network-image"
                    src="./images/bitcoin-logo.svg"
                  />
                </div>
                <div
                  class="mm-box mm-box--display-flex mm-box--flex-direction-column mm-box--justify-content-flex-start mm-box--align-items-flex-start mm-box--width-full"
                  style="overflow: hidden;"
                >
                  <div
                    class="mm-box mm-box--display-flex mm-box--gap-2 mm-box--flex-direction-row mm-box--align-items-center mm-box--width-full"
                    data-testid="Bitcoin"
                  >
                    <div
                      class="multichain-network-list-item__tooltip"
                    >
                      <div
                        class=""
                        style="display: inline;"
                        tabindex="0"
                        title=""
                      >
                        <p
                          class="mm-box mm-text mm-text--body-md mm-text--ellipsis mm-box--color-text-default mm-box--background-color-transparent"
                          tabindex="0"
                        >
                          Bitcoin
                        </p>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class=""
              data-testid="bridge-network-picker-popover-item-eip155:1"
            >
              <div
                class="mm-box multichain-network-list-item multichain-network-list-item--deselected mm-box--padding-top-4 mm-box--padding-right-4 mm-box--padding-bottom-4 mm-box--padding-left-4 mm-box--display-flex mm-box--gap-4 mm-box--justify-content-space-between mm-box--align-items-center mm-box--width-full mm-box--background-color-transparent"
                data-testid="network-list-item-eip155:1"
              >
                <div
                  class="mm-box mm-text mm-avatar-base mm-avatar-base--size-md mm-avatar-network mm-text--body-sm mm-text--text-transform-uppercase mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-background-alternative mm-box--rounded-md mm-box--border-color-background-default mm-box--border-width-1 box--border-style-solid"
                >
                  <img
                    alt="Ethereum logo"
                    class="mm-avatar-network__network-image"
                    src="./images/eth_logo.svg"
                  />
                </div>
                <div
                  class="mm-box mm-box--display-flex mm-box--flex-direction-column mm-box--justify-content-flex-start mm-box--align-items-flex-start mm-box--width-full"
                  style="overflow: hidden;"
                >
                  <div
                    class="mm-box mm-box--display-flex mm-box--gap-2 mm-box--flex-direction-row mm-box--align-items-center mm-box--width-full"
                    data-testid="Ethereum"
                  >
                    <div
                      class="multichain-network-list-item__tooltip"
                    >
                      <div
                        class=""
                        style="display: inline;"
                        tabindex="0"
                        title=""
                      >
                        <p
                          class="mm-box mm-text mm-text--body-md mm-text--ellipsis mm-box--color-text-default mm-box--background-color-transparent"
                          tabindex="0"
                        >
                          Ethereum
                        </p>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class=""
              data-testid="bridge-network-picker-popover-item-eip155:10"
            >
              <div
                class="mm-box multichain-network-list-item multichain-network-list-item--deselected mm-box--padding-top-4 mm-box--padding-right-4 mm-box--padding-bottom-4 mm-box--padding-left-4 mm-box--display-flex mm-box--gap-4 mm-box--justify-content-space-between mm-box--align-items-center mm-box--width-full mm-box--background-color-transparent"
                data-testid="network-list-item-eip155:10"
              >
                <div
                  class="mm-box mm-text mm-avatar-base mm-avatar-base--size-md mm-avatar-network mm-text--body-sm mm-text--text-transform-uppercase mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-background-alternative mm-box--rounded-md mm-box--border-color-background-default mm-box--border-width-1 box--border-style-solid"
                >
                  <img
                    alt="OP logo"
                    class="mm-avatar-network__network-image"
                    src="./images/optimism.svg"
                  />
                </div>
                <div
                  class="mm-box mm-box--display-flex mm-box--flex-direction-column mm-box--justify-content-flex-start mm-box--align-items-flex-start mm-box--width-full"
                  style="overflow: hidden;"
                >
                  <div
                    class="mm-box mm-box--display-flex mm-box--gap-2 mm-box--flex-direction-row mm-box--align-items-center mm-box--width-full"
                    data-testid="OP"
                  >
                    <div
                      class="multichain-network-list-item__tooltip"
                    >
                      <div
                        class=""
                        style="display: inline;"
                        tabindex="0"
                        title=""
                      >
                        <p
                          class="mm-box mm-text mm-text--body-md mm-text--ellipsis mm-box--color-text-default mm-box--background-color-transparent"
                          tabindex="0"
                        >
                          OP
                        </p>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class=""
              data-testid="bridge-network-picker-popover-item-eip155:137"
            >
              <div
                class="mm-box multichain-network-list-item multichain-network-list-item--deselected mm-box--padding-top-4 mm-box--padding-right-4 mm-box--padding-bottom-4 mm-box--padding-left-4 mm-box--display-flex mm-box--gap-4 mm-box--justify-content-space-between mm-box--align-items-center mm-box--width-full mm-box--background-color-transparent"
                data-testid="network-list-item-eip155:137"
              >
                <div
                  class="mm-box mm-text mm-avatar-base mm-avatar-base--size-md mm-avatar-network mm-text--body-sm mm-text--text-transform-uppercase mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-background-alternative mm-box--rounded-md mm-box--border-color-background-default mm-box--border-width-1 box--border-style-solid"
                >
                  <img
                    alt="Polygon logo"
                    class="mm-avatar-network__network-image"
                    src="./images/pol-token.svg"
                  />
                </div>
                <div
                  class="mm-box mm-box--display-flex mm-box--flex-direction-column mm-box--justify-content-flex-start mm-box--align-items-flex-start mm-box--width-full"
                  style="overflow: hidden;"
                >
                  <div
                    class="mm-box mm-box--display-flex mm-box--gap-2 mm-box--flex-direction-row mm-box--align-items-center mm-box--width-full"
                    data-testid="Polygon"
                  >
                    <div
                      class="multichain-network-list-item__tooltip"
                    >
                      <div
                        class=""
                        style="display: inline;"
                        tabindex="0"
                        title=""
                      >
                        <p
                          class="mm-box mm-text mm-text--body-md mm-text--ellipsis mm-box--color-text-default mm-box--background-color-transparent"
                          tabindex="0"
                        >
                          Polygon
                        </p>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class=""
              data-testid="bridge-network-picker-popover-item-eip155:56"
            >
              <div
                class="mm-box multichain-network-list-item multichain-network-list-item--deselected mm-box--padding-top-4 mm-box--padding-right-4 mm-box--padding-bottom-4 mm-box--padding-left-4 mm-box--display-flex mm-box--gap-4 mm-box--justify-content-space-between mm-box--align-items-center mm-box--width-full mm-box--background-color-transparent"
                data-testid="network-list-item-eip155:56"
              >
                <div
                  class="mm-box mm-text mm-avatar-base mm-avatar-base--size-md mm-avatar-network mm-text--body-sm mm-text--text-transform-uppercase mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-background-alternative mm-box--rounded-md mm-box--border-color-background-default mm-box--border-width-1 box--border-style-solid"
                >
                  <img
                    alt="BNB Chain logo"
                    class="mm-avatar-network__network-image"
                    src="./images/bnb.svg"
                  />
                </div>
                <div
                  class="mm-box mm-box--display-flex mm-box--flex-direction-column mm-box--justify-content-flex-start mm-box--align-items-flex-start mm-box--width-full"
                  style="overflow: hidden;"
                >
                  <div
                    class="mm-box mm-box--display-flex mm-box--gap-2 mm-box--flex-direction-row mm-box--align-items-center mm-box--width-full"
                    data-testid="BNB Chain"
                  >
                    <div
                      class="multichain-network-list-item__tooltip"
                    >
                      <div
                        class=""
                        style="display: inline;"
                        tabindex="0"
                        title=""
                      >
                        <p
                          class="mm-box mm-text mm-text--body-md mm-text--ellipsis mm-box--color-text-default mm-box--background-color-transparent"
                          tabindex="0"
                        >
                          BNB Chain
                        </p>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class=""
              data-testid="bridge-network-picker-popover-item-tron:728126428"
            >
              <div
                class="mm-box multichain-network-list-item multichain-network-list-item--deselected mm-box--padding-top-4 mm-box--padding-right-4 mm-box--padding-bottom-4 mm-box--padding-left-4 mm-box--display-flex mm-box--gap-4 mm-box--justify-content-space-between mm-box--align-items-center mm-box--width-full mm-box--background-color-transparent"
                data-testid="network-list-item-tron:728126428"
              >
                <div
                  class="mm-box mm-text mm-avatar-base mm-avatar-base--size-md mm-avatar-network mm-text--body-sm mm-text--text-transform-uppercase mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-background-alternative mm-box--rounded-md mm-box--border-color-background-default mm-box--border-width-1 box--border-style-solid"
                >
                  <img
                    alt="Tron logo"
                    class="mm-avatar-network__network-image"
                    src="./images/tron-logo.svg"
                  />
                </div>
                <div
                  class="mm-box mm-box--display-flex mm-box--flex-direction-column mm-box--justify-content-flex-start mm-box--align-items-flex-start mm-box--width-full"
                  style="overflow: hidden;"
                >
                  <div
                    class="mm-box mm-box--display-flex mm-box--gap-2 mm-box--flex-direction-row mm-box--align-items-center mm-box--width-full"
                    data-testid="Tron"
                  >
                    <div
                      class="multichain-network-list-item__tooltip"
                    >
                      <div
                        class=""
                        style="display: inline;"
                        tabindex="0"
                        title=""
                      >
                        <p
                          class="mm-box mm-text mm-text--body-md mm-text--ellipsis mm-box--color-text-default mm-box--background-color-transparent"
                          tabindex="0"
                        >
                          Tron
                        </p>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </section>
    </div>
  </div>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />
</div>
`;

exports[`BridgeInputGroup should render source networks 1`] = `
<div
  class="mm-modal"
  data-testid="bridge-network-picker-popover"
>
  <div
    aria-hidden="true"
    class="mm-box mm-modal-overlay mm-box--width-full mm-box--height-full mm-box--background-color-overlay-default"
  />
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />
  <div
    data-focus-lock-disabled="false"
  >
    <div
      class="mm-box mm-modal-content mm-box--padding-top-4 mm-box--sm:padding-top-8 mm-box--md:padding-top-12 mm-box--padding-right-4 mm-box--padding-bottom-4 mm-box--sm:padding-bottom-8 mm-box--md:padding-bottom-12 mm-box--padding-left-4 mm-box--display-flex mm-box--justify-content-center mm-box--align-items-flex-start mm-box--width-screen mm-box--height-screen"
    >
      <section
        aria-modal="true"
        class="mm-box mm-modal-content__dialog mm-modal-content__dialog--size-sm flex h-full flex-col overflow-hidden mm-box--padding-0 mm-box--padding-top-4 mm-box--padding-bottom-4 mm-box--display-flex mm-box--flex-direction-column mm-box--width-full mm-box--background-color-background-default mm-box--rounded-lg"
        role="dialog"
      >
        <header
          class="grid grid-cols-[1fr_auto_1fr] items-center px-4 pb-4"
        >
          <div
            class="col-start-2 col-end-3 w-full"
          >
            <h4
              class="text-default text-s-heading-sm leading-s-heading-sm tracking-s-heading-sm md:text-l-heading-sm md:leading-l-heading-sm md:tracking-l-heading-sm font-bold font-default text-center"
            >
              Select network
            </h4>
          </div>
          <div
            class="col-start-3 justify-self-end"
          >
            <button
              aria-label="Close"
              class="inline-flex items-center justify-center p-0 h-8 w-8 rounded-lg bg-transparent hover:bg-hover active:bg-pressed text-icon-default"
            >
              <svg
                class="inline-block w-6 h-6 text-inherit"
                fill="currentColor"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M6.4 19 5 17.6l5.6-5.6L5 6.4 6.4 5l5.6 5.6L17.6 5 19 6.4 13.4 12l5.6 5.6-1.4 1.4-5.6-5.6z"
                />
              </svg>
            </button>
          </div>
        </header>
        <div
          class="flex flex-col min-h-0 flex-1 overflow-y-auto"
        >
          <button
            class="flex min-h-16 w-full cursor-pointer items-center justify-between border-0 p-4 text-left hover:bg-hover bg-muted"
            data-testid="bridge-network-picker-popover-all-networks"
            type="button"
          >
            <div
              class="flex min-w-0 items-center gap-3"
            >
              <div
                class="inline-flex shrink-0 items-center justify-center overflow-hidden bg-alternative rounded-lg h-8 w-8"
              >
                <img
                  alt="All networks"
                  class="size-full object-contain"
                  src="Global"
                />
              </div>
              <p
                class="text-default text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-medium font-default truncate"
              >
                All networks
              </p>
            </div>
            <span
              class="mm-box mm-icon mm-icon--size-lg mm-box--display-inline-block mm-box--color-inherit"
              style="mask-image: url('./images/icons/check.svg');"
            />
          </button>
          <div
            class="flex flex-col"
          >
            <p
              class="text-alternative text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-medium font-default px-4 pb-2 pt-4"
            >
              Default networks
            </p>
            <div
              class=""
              data-testid="bridge-network-picker-popover-item-solana:5eykt4UsFv8P8NJdTREpY1vzqKqZKvdp"
            >
              <div
                class="mm-box multichain-network-list-item multichain-network-list-item--deselected mm-box--padding-top-4 mm-box--padding-right-4 mm-box--padding-bottom-4 mm-box--padding-left-4 mm-box--display-flex mm-box--gap-4 mm-box--justify-content-space-between mm-box--align-items-center mm-box--width-full mm-box--background-color-transparent"
                data-testid="network-list-item-solana:5eykt4UsFv8P8NJdTREpY1vzqKqZKvdp"
              >
                <div
                  class="mm-box mm-text mm-avatar-base mm-avatar-base--size-md mm-avatar-network mm-text--body-sm mm-text--text-transform-uppercase mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-background-alternative mm-box--rounded-md mm-box--border-color-background-default mm-box--border-width-1 box--border-style-solid"
                >
                  <img
                    alt="Solana logo"
                    class="mm-avatar-network__network-image"
                    src="./images/solana-logo.svg"
                  />
                </div>
                <div
                  class="mm-box mm-box--display-flex mm-box--flex-direction-column mm-box--justify-content-flex-start mm-box--align-items-flex-start mm-box--width-full"
                  style="overflow: hidden;"
                >
                  <div
                    class="mm-box mm-box--display-flex mm-box--gap-2 mm-box--flex-direction-row mm-box--align-items-center mm-box--width-full"
                    data-testid="Solana"
                  >
                    <div
                      class="multichain-network-list-item__tooltip"
                    >
                      <div
                        class=""
                        style="display: inline;"
                        tabindex="0"
                        title=""
                      >
                        <p
                          class="mm-box mm-text mm-text--body-md mm-text--ellipsis mm-box--color-text-default mm-box--background-color-transparent"
                          tabindex="0"
                        >
                          Solana
                        </p>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class=""
              data-testid="bridge-network-picker-popover-item-bip122:000000000019d6689c085ae165831e93"
            >
              <div
                class="mm-box multichain-network-list-item multichain-network-list-item--deselected mm-box--padding-top-4 mm-box--padding-right-4 mm-box--padding-bottom-4 mm-box--padding-left-4 mm-box--display-flex mm-box--gap-4 mm-box--justify-content-space-between mm-box--align-items-center mm-box--width-full mm-box--background-color-transparent"
                data-testid="network-list-item-bip122:000000000019d6689c085ae165831e93"
              >
                <div
                  class="mm-box mm-text mm-avatar-base mm-avatar-base--size-md mm-avatar-network mm-text--body-sm mm-text--text-transform-uppercase mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-background-alternative mm-box--rounded-md mm-box--border-color-background-default mm-box--border-width-1 box--border-style-solid"
                >
                  <img
                    alt="Bitcoin logo"
                    class="mm-avatar-network__network-image"
                    src="./images/bitcoin-logo.svg"
                  />
                </div>
                <div
                  class="mm-box mm-box--display-flex mm-box--flex-direction-column mm-box--justify-content-flex-start mm-box--align-items-flex-start mm-box--width-full"
                  style="overflow: hidden;"
                >
                  <div
                    class="mm-box mm-box--display-flex mm-box--gap-2 mm-box--flex-direction-row mm-box--align-items-center mm-box--width-full"
                    data-testid="Bitcoin"
                  >
                    <div
                      class="multichain-network-list-item__tooltip"
                    >
                      <div
                        class=""
                        style="display: inline;"
                        tabindex="0"
                        title=""
                      >
                        <p
                          class="mm-box mm-text mm-text--body-md mm-text--ellipsis mm-box--color-text-default mm-box--background-color-transparent"
                          tabindex="0"
                        >
                          Bitcoin
                        </p>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class=""
              data-testid="bridge-network-picker-popover-item-eip155:1"
            >
              <div
                class="mm-box multichain-network-list-item multichain-network-list-item--deselected mm-box--padding-top-4 mm-box--padding-right-4 mm-box--padding-bottom-4 mm-box--padding-left-4 mm-box--display-flex mm-box--gap-4 mm-box--justify-content-space-between mm-box--align-items-center mm-box--width-full mm-box--background-color-transparent"
                data-testid="network-list-item-eip155:1"
              >
                <div
                  class="mm-box mm-text mm-avatar-base mm-avatar-base--size-md mm-avatar-network mm-text--body-sm mm-text--text-transform-uppercase mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-background-alternative mm-box--rounded-md mm-box--border-color-background-default mm-box--border-width-1 box--border-style-solid"
                >
                  <img
                    alt="Ethereum logo"
                    class="mm-avatar-network__network-image"
                    src="./images/eth_logo.svg"
                  />
                </div>
                <div
                  class="mm-box mm-box--display-flex mm-box--flex-direction-column mm-box--justify-content-flex-start mm-box--align-items-flex-start mm-box--width-full"
                  style="overflow: hidden;"
                >
                  <div
                    class="mm-box mm-box--display-flex mm-box--gap-2 mm-box--flex-direction-row mm-box--align-items-center mm-box--width-full"
                    data-testid="Ethereum"
                  >
                    <div
                      class="multichain-network-list-item__tooltip"
                    >
                      <div
                        class=""
                        style="display: inline;"
                        tabindex="0"
                        title=""
                      >
                        <p
                          class="mm-box mm-text mm-text--body-md mm-text--ellipsis mm-box--color-text-default mm-box--background-color-transparent"
                          tabindex="0"
                        >
                          Ethereum
                        </p>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class=""
              data-testid="bridge-network-picker-popover-item-eip155:10"
            >
              <div
                class="mm-box multichain-network-list-item multichain-network-list-item--deselected mm-box--padding-top-4 mm-box--padding-right-4 mm-box--padding-bottom-4 mm-box--padding-left-4 mm-box--display-flex mm-box--gap-4 mm-box--justify-content-space-between mm-box--align-items-center mm-box--width-full mm-box--background-color-transparent"
                data-testid="network-list-item-eip155:10"
              >
                <div
                  class="mm-box mm-text mm-avatar-base mm-avatar-base--size-md mm-avatar-network mm-text--body-sm mm-text--text-transform-uppercase mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-background-alternative mm-box--rounded-md mm-box--border-color-background-default mm-box--border-width-1 box--border-style-solid"
                >
                  <img
                    alt="OP logo"
                    class="mm-avatar-network__network-image"
                    src="./images/optimism.svg"
                  />
                </div>
                <div
                  class="mm-box mm-box--display-flex mm-box--flex-direction-column mm-box--justify-content-flex-start mm-box--align-items-flex-start mm-box--width-full"
                  style="overflow: hidden;"
                >
                  <div
                    class="mm-box mm-box--display-flex mm-box--gap-2 mm-box--flex-direction-row mm-box--align-items-center mm-box--width-full"
                    data-testid="OP"
                  >
                    <div
                      class="multichain-network-list-item__tooltip"
                    >
                      <div
                        class=""
                        style="display: inline;"
                        tabindex="0"
                        title=""
                      >
                        <p
                          class="mm-box mm-text mm-text--body-md mm-text--ellipsis mm-box--color-text-default mm-box--background-color-transparent"
                          tabindex="0"
                        >
                          OP
                        </p>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class=""
              data-testid="bridge-network-picker-popover-item-eip155:137"
            >
              <div
                class="mm-box multichain-network-list-item multichain-network-list-item--deselected mm-box--padding-top-4 mm-box--padding-right-4 mm-box--padding-bottom-4 mm-box--padding-left-4 mm-box--display-flex mm-box--gap-4 mm-box--justify-content-space-between mm-box--align-items-center mm-box--width-full mm-box--background-color-transparent"
                data-testid="network-list-item-eip155:137"
              >
                <div
                  class="mm-box mm-text mm-avatar-base mm-avatar-base--size-md mm-avatar-network mm-text--body-sm mm-text--text-transform-uppercase mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-background-alternative mm-box--rounded-md mm-box--border-color-background-default mm-box--border-width-1 box--border-style-solid"
                >
                  <img
                    alt="Polygon logo"
                    class="mm-avatar-network__network-image"
                    src="./images/pol-token.svg"
                  />
                </div>
                <div
                  class="mm-box mm-box--display-flex mm-box--flex-direction-column mm-box--justify-content-flex-start mm-box--align-items-flex-start mm-box--width-full"
                  style="overflow: hidden;"
                >
                  <div
                    class="mm-box mm-box--display-flex mm-box--gap-2 mm-box--flex-direction-row mm-box--align-items-center mm-box--width-full"
                    data-testid="Polygon"
                  >
                    <div
                      class="multichain-network-list-item__tooltip"
                    >
                      <div
                        class=""
                        style="display: inline;"
                        tabindex="0"
                        title=""
                      >
                        <p
                          class="mm-box mm-text mm-text--body-md mm-text--ellipsis mm-box--color-text-default mm-box--background-color-transparent"
                          tabindex="0"
                        >
                          Polygon
                        </p>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class=""
              data-testid="bridge-network-picker-popover-item-eip155:56"
            >
              <div
                class="mm-box multichain-network-list-item multichain-network-list-item--deselected mm-box--padding-top-4 mm-box--padding-right-4 mm-box--padding-bottom-4 mm-box--padding-left-4 mm-box--display-flex mm-box--gap-4 mm-box--justify-content-space-between mm-box--align-items-center mm-box--width-full mm-box--background-color-transparent"
                data-testid="network-list-item-eip155:56"
              >
                <div
                  class="mm-box mm-text mm-avatar-base mm-avatar-base--size-md mm-avatar-network mm-text--body-sm mm-text--text-transform-uppercase mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-background-alternative mm-box--rounded-md mm-box--border-color-background-default mm-box--border-width-1 box--border-style-solid"
                >
                  <img
                    alt="BNB Chain logo"
                    class="mm-avatar-network__network-image"
                    src="./images/bnb.svg"
                  />
                </div>
                <div
                  class="mm-box mm-box--display-flex mm-box--flex-direction-column mm-box--justify-content-flex-start mm-box--align-items-flex-start mm-box--width-full"
                  style="overflow: hidden;"
                >
                  <div
                    class="mm-box mm-box--display-flex mm-box--gap-2 mm-box--flex-direction-row mm-box--align-items-center mm-box--width-full"
                    data-testid="BNB Chain"
                  >
                    <div
                      class="multichain-network-list-item__tooltip"
                    >
                      <div
                        class=""
                        style="display: inline;"
                        tabindex="0"
                        title=""
                      >
                        <p
                          class="mm-box mm-text mm-text--body-md mm-text--ellipsis mm-box--color-text-default mm-box--background-color-transparent"
                          tabindex="0"
                        >
                          BNB Chain
                        </p>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </section>
    </div>
  </div>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />
</div>
`;
